<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_green">


    <TextView
        android:id="@+id/placeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_name"
        android:textColor="@color/preto"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/openTrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeName"
        android:text="@string/open_trade"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tradeAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openTrade"
        android:text="@string/trade_assessment"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/placeDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tradeAssessment"
        android:text="@string/place_distance"
        android:textColor="@color/preto"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>