<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button_green">

                <TextView
                    android:id="@+id/infoChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/by_distance_or_radius"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/byDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoChoice"
                    android:layout_margin="20dp"
                    android:text="@string/by_distance" />

                <Button
                    android:id="@+id/byRadius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoChoice"
                    android:layout_alignParentRight="true"
                    android:layout_margin="20dp"
                    android:text="@string/by_radius"
                    android:layout_alignParentEnd="true" />


        </RelativeLayout>

</RelativeLayout>