<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024">

        <ProgressBar
            android:id="@+id/restaurantLoading"
            android:layout_toStartOf="@id/getRestaurant"
            android:layout_toLeftOf="@id/getRestaurant"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:indeterminateDrawable="@drawable/custom_progress_buttons" />

        <Button
            android:id="@+id/getRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/get_restaurant"
            tools:ignore="RelativeOverlap" />

        <ProgressBar
            android:id="@+id/barLoading"
            android:layout_below="@id/getRestaurant"
            android:layout_toLeftOf="@id/getBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:indeterminateDrawable="@drawable/custom_progress_buttons"
            android:layout_toStartOf="@id/getBar" />

        <Button
            android:id="@+id/getBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getRestaurant"
            android:layout_centerHorizontal="true"
            android:text="@string/get_bar" />

        <ProgressBar
            android:id="@+id/cafeLoading"
            android:layout_below="@id/getBar"
            android:layout_toLeftOf="@id/getCafe"
            android:layout_toStartOf="@id/getCafe"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:indeterminateDrawable="@drawable/custom_progress_buttons"/>

        <Button
            android:id="@+id/getCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getBar"
            android:layout_centerHorizontal="true"
            android:text="@string/get_cafe" />

    </RelativeLayout>

    <TextView
        android:id="@+id/defineApiKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:text="@string/set_api_key"

        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />


</androidx.constraintlayout.widget.ConstraintLayout>